--- a/html-files/first-template.html
+++ b/html-files/first-template.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template one</title>
     <!-- Here is the main css style sheet -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <!-- Here is the normalize file css file  -->
-    <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="../css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" href="/images/blue logo1212.png" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
   </head>
   <body>
     <!-- Start of Header -->
@@ -24,7 +29,7 @@
       <div class="container">
         <div class="logo">
           <span class="line"></span>
-          <img src="/images/blue logo1212.png" />
+          <img src="../images/blue logo1212.png" />
         </div>
         <div class="links">
           <span class="icon">
@@ -45,7 +50,7 @@
     <!-- Start of Landing Section  -->
     <div class="landing">
       <div class="intro-text">
-        <h1>Haif Alsharif</h1>
+        <h1>Hello Everyone</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
           repudiandae fugit, laboriosam suscipit rerum magnam ex, numquam sit
@@ -146,7 +151,7 @@
           </div>
           <div class="col">
             <div class="image image-column">
-              <img src="/images/downtown.jpeg" alt="" />
+              <img src="../images/downtown.jpeg" alt="" />
             </div>
           </div>
         </div>
@@ -160,7 +165,7 @@
         <p>if you do it right, it will last for ever</p>
         <div class="portfolio-content">
           <div class="card">
-            <img src="images/portfoilo1.jpg" alt="" />
+            <img src="../images/portfoilo1.jpg" alt="" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -171,7 +176,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="images/portfoilo2.jpg" alt="" />
+            <img src="../images/portfoilo2.jpg" alt="" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -182,7 +187,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="images/portfolio4.jpg" alt="" />
+            <img src="../images/portfolio4.jpg" alt="" />
             <div class="info">
               <h3>Project Here</h3>
               <p>
@@ -203,7 +208,7 @@
         <p>less is more work</p>
         <div class="about-content">
           <div class="image">
-            <img src="/images/black and white.jpg" alt="" />
+            <img src="../images/black and white.jpg" alt="" />
           </div>
           <div class="about-text">
             <p>
